--- a/app/src/main/res/layout/activity_choice_song.xml
+++ b/app/src/main/res/layout/activity_choice_song.xml
@@ -12,18 +12,16 @@
     <ImageButton
         android:id="@+id/song_plane"
         android:layout_width="wrap_content"
-        android:layout_height="196dp"
-        android:layout_gravity="center"
-        android:background="@drawable/background"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
         android:scaleType="centerInside"
         android:src="@drawable/song_plane" />
 
     <ImageButton
         android:id="@+id/song_star"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="@drawable/background"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
         android:scaleType="centerInside"
         android:src="@drawable/song_star" />
 
@@ -31,9 +29,8 @@
         android:id="@+id/songbutton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
         android:src="@drawable/song_school"
-        android:layout_gravity="center"
-        android:background="@drawable/background"
         android:scaleType="centerInside"/>
 
 
