--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,11 @@
             android:background="@drawable/click_use"/>-->
         <Button
             android:id="@+id/button1"
-            android:layout_gravity="center"
-            android:background="@android:color/transparent"
             android:drawableLeft="@drawable/ic_free_icon_diamond_636601"
             android:fontFamily="@font/scdream2"
             android:paddingLeft="100dp"
-            android:scaleType="centerInside"
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple"
             android:text="시작하기"
             android:textSize="30dp"
             android:layout_width="match_parent"
@@ -41,12 +40,11 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_gravity="center"
-            android:background="@android:color/transparent"
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple"
             android:drawableLeft="@drawable/ic_free_icon_magnifying_glass_126474"
             android:fontFamily="@font/scdream2"
             android:paddingLeft="100dp"
-            android:scaleType="centerInside"
             android:text="사용법"
             android:textSize="30dp"
             android:layout_width="match_parent"
