--- a/app/src/main/res/layout/activity_choice_level.xml
+++ b/app/src/main/res/layout/activity_choice_level.xml
@@ -35,11 +35,11 @@
     <Button
         android:id="@+id/levelhigh"
         android:layout_gravity="center"
-        android:background="@android:color/transparent"
+        android:background="?selectableItemBackground"
+        android:theme="@style/AppTheme.BlueRipple"
         android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
         android:fontFamily="@font/scdream2"
         android:paddingLeft="140dp"
-        android:scaleType="centerInside"
         android:text="@string/high"
         android:textSize="30dp"
         android:layout_width="match_parent"
@@ -48,12 +48,11 @@
 
     <Button
         android:id="@+id/levelmiddle"
-        android:layout_gravity="center"
-        android:background="@android:color/transparent"
+        android:background="?selectableItemBackground"
+        android:theme="@style/AppTheme.BlueRipple"
         android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
         android:fontFamily="@font/scdream2"
         android:paddingLeft="140dp"
-        android:scaleType="centerInside"
         android:text="@string/middle"
         android:textSize="30dp"
         android:layout_width="match_parent"
@@ -62,12 +61,11 @@
 
     <Button
         android:id="@+id/levellow"
-        android:layout_gravity="center"
-        android:background="@android:color/transparent"
+        android:background="?selectableItemBackground"
+        android:theme="@style/AppTheme.BlueRipple"
         android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
         android:fontFamily="@font/scdream2"
         android:paddingLeft="140dp"
-        android:scaleType="centerInside"
         android:text="@string/low"
         android:textSize="30dp"
         android:layout_width="match_parent"
