--- a/app/src/main/res/layout/activity_part_practice.xml
+++ b/app/src/main/res/layout/activity_part_practice.xml
@@ -1,40 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/recordButton"
+    <ImageView
+        android:id="@+id/firstmusicscore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="녹음" />
+        android:scaleType="centerInside"
+        android:layout_gravity="bottom"
+        android:src="@drawable/firstscore" />
 
-    <Button
-        android:id="@+id/playButton"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="재생" />
+        android:orientation="horizontal">
 
-    <FrameLayout
+        <Button
+            android:id="@+id/pitchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="떴"
+            android:textSize="20dp"
+            app:backgroundTint="#AAA9A9" />
+
+        <Button
+            android:id="@+id/pitchbutton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다"
+            android:textSize="20dp"
+            app:backgroundTint="#AAA9A9" />
+
+        <Button
+            android:id="@+id/pitchbutton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="떴"
+            android:textSize="20dp"
+            app:backgroundTint="#AAA9A9" />
+
+        <Button
+            android:id="@+id/pitchbutton4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다"
+            android:textSize="20dp"
+            app:backgroundTint="#AAA9A9" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/pitchTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="0"
+        android:textColor="#000000"
+        android:textSize="50sp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pitch:" />
+            android:layout_gravity="bottom"
+            android:layout_margin="30dp"
+            android:fontFamily="casual"
+            android:text="Too high!"
+            android:textColor="#000000"
+            android:textSize="35dp" />
 
         <TextView
-            android:id="@+id/pitchTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="0"
-            android:textSize="50sp" />
+            android:layout_gravity="bottom"
+            android:layout_margin="30dp"
+            android:fontFamily="casual"
+            android:text="Too low!"
+            android:textColor="#000000"
+            android:textSize="35dp" />
 
-    </FrameLayout>
+    </LinearLayout>
+
 
 </LinearLayout>
