--- a/app/src/main/res/layout/activity_part_practice.xml
+++ b/app/src/main/res/layout/activity_part_practice.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/back">
 
     <ImageView
         android:id="@+id/firstmusicscore"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerInside"
+        android:layout_height="210dp"
         android:layout_gravity="bottom"
+        android:scaleType="centerInside"
         android:src="@drawable/firstscore" />
 
     <LinearLayout
@@ -20,41 +21,106 @@
 
         <Button
             android:id="@+id/pitchButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/scdream2"
             android:text="떴"
             android:textSize="20dp"
-            app:backgroundTint="#AAA9A9" />
+            android:clickable="true"
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple" />
 
         <Button
             android:id="@+id/pitchbutton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/scdream2"
             android:text="다"
             android:textSize="20dp"
-            app:backgroundTint="#AAA9A9" />
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple" />
 
         <Button
             android:id="@+id/pitchbutton3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/scdream2"
             android:text="떴"
             android:textSize="20dp"
-            app:backgroundTint="#AAA9A9" />
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple"/>
 
         <Button
             android:id="@+id/pitchbutton4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:text="다"
+            android:fontFamily="@font/scdream2"
             android:textSize="20dp"
-            app:backgroundTint="#AAA9A9" />
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/pitchButton5"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/scdream2"
+            android:text="비"
+            android:textSize="20dp"
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple"  />
+
+        <Button
+            android:id="@+id/pitchbutton6"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/scdream2"
+            android:text="행"
+            android:textSize="20dp"
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple"  />
+
+        <Button
+            android:id="@+id/pitchbutton7"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/scdream2"
+            android:text="기"
+            android:textSize="20dp"
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple"  />
+
+
+        <Button
+            android:id="@+id/pitchbutton8"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/scdream2"
+            android:text=""
+            android:textSize="20dp"
+            android:background="?selectableItemBackground"
+            android:theme="@style/AppTheme.BlueRipple" />
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/pitchTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="18dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="0"
@@ -77,7 +143,7 @@
             android:textSize="35dp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="185dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_margin="30dp"
