--- a/app/src/main/res/layout/activity_part_practice.xml
+++ b/app/src/main/res/layout/activity_part_practice.xml
@@ -26,6 +26,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/scdream2"
             android:text="떴"
+            android:textColor="@drawable/selected_btn"
             android:textSize="20dp"
             android:background="?selectableItemBackground"
             android:theme="@style/AppTheme.BlueRipple" />
@@ -37,6 +38,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/scdream2"
             android:text="다"
+            android:textColor="@drawable/selected_btn"
             android:textSize="20dp"
             android:background="?selectableItemBackground"
             android:theme="@style/AppTheme.BlueRipple" />
@@ -48,6 +50,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/scdream2"
             android:text="떴"
+            android:textColor="@drawable/selected_btn"
             android:textSize="20dp"
             android:background="?selectableItemBackground"
             android:theme="@style/AppTheme.BlueRipple"/>
@@ -58,6 +61,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="다"
+            android:textColor="@drawable/selected_btn"
             android:fontFamily="@font/scdream2"
             android:textSize="20dp"
             android:background="?selectableItemBackground"
@@ -77,6 +81,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/scdream2"
             android:text="비"
+            android:textColor="@drawable/selected_btn"
             android:textSize="20dp"
             android:background="?selectableItemBackground"
             android:theme="@style/AppTheme.BlueRipple"  />
@@ -88,6 +93,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/scdream2"
             android:text="행"
+            android:textColor="@drawable/selected_btn"
             android:textSize="20dp"
             android:background="?selectableItemBackground"
             android:theme="@style/AppTheme.BlueRipple"  />
@@ -99,6 +105,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/scdream2"
             android:text="기"
+            android:textColor="@drawable/selected_btn"
             android:textSize="20dp"
             android:background="?selectableItemBackground"
             android:theme="@style/AppTheme.BlueRipple"  />
