--- a/app/src/main/res/anim/intro.xml
+++ b/app/src/main/res/anim/intro.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--<scale
-        android:fromXScale="0.0"
-        android:toXScale="1.0"
-        android:fromYScale="0.0"
-        android:toYScale="1.0"
+  <!--<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+        android:interpolator="@android:anim/overshoot_interpolator"
+        android:duration="3000"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="5000"/>-->
-    <!-- fromXScale 원래 사이즈의 배율 1.0이 원래 사이즈-->
-    <!-- pivotX="50%p" p는 parent의 약자로 부모의 위치이다.-->
-   <!-- <alpha
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0"
-        android:duration="5000"/-->
+        android:fromDegrees="0"
+        android:toDegrees="360">
+    </rotate>-->
 
-    <translate
-        android:fromXDelta="0"
-        android:toXDelta="0"
-        android:fromYDelta="-30%p"
-        android:toYDelta="0%p"
-        android:duration="4000"/>
 
-</set>
+
+    <translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/bounce_interpolator"
+    android:duration="3000"
+    android:fromXDelta="-50%"
+    android:toXDelta="0"
+    android:fromYDelta="-200%"
+    android:toYDelta="0">
+</translate>
+
