--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,13 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SplashActivity">
+    tools:context=".SplashActivity"
+    android:background="@drawable/back">
 
-    <VideoView
+  <!--  <VideoView
         android:id="@+id/splash"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        />
+        />-->
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="200dp" />
+
+
+    <TextView
+        android:drawableTop="@drawable/ic_karaoke"
+        android:id="@+id/intro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/scdream2"
+        android:gravity="center_horizontal"
+        android:text="씽씽 \n Seeing Sing"
+        android:textSize="30dp"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
