add infer constraints

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="@drawable/backmain">
+    android:background="@drawable/backmain"
+    tools:context=".MainActivity">
 
-        <!--<ImageButton
+    <!--<ImageButton
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,29 +25,38 @@
             android:scaleType="center"
             android:src="@drawable/usingbutton"
             android:background="@drawable/click_use"/>-->
-       <Button
-            android:id="@+id/button1"
-            android:drawableLeft="@drawable/ic_free_icon_diamond_636601"
-            android:fontFamily="@font/scdream2"
-            android:paddingLeft="100dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple"
-            android:text="시작하기"
-            android:textSize="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"     />
-        <Button
-            android:id="@+id/button2"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple"
-            android:drawableLeft="@drawable/ic_free_icon_magnifying_glass_126474"
-            android:fontFamily="@font/scdream2"
-            android:paddingLeft="100dp"
-            android:text="사용법"
-            android:textSize="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="1"     />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_free_icon_diamond_636601"
+        android:fontFamily="@font/scdream2"
+        android:paddingLeft="100dp"
+        android:text="시작하기"
+        android:textSize="30dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_free_icon_magnifying_glass_126474"
+        android:fontFamily="@font/scdream2"
+        android:paddingLeft="100dp"
+        android:text="사용법"
+        android:textSize="30dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
