--- a/app/src/main/res/layout/activity_choice_song.xml
+++ b/app/src/main/res/layout/activity_choice_song.xml
@@ -1,55 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ChoiceSong"
     android:background="@drawable/backsonglist"
-    >
+    tools:context=".ChoiceSong">
 
     <Button
         android:id="@+id/song_plane"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
+        android:fontFamily="@font/scdream2"
         android:paddingLeft="40dp"
         android:scaleType="centerInside"
         android:text="@string/strBtn1"
-        android:fontFamily = "@font/scdream2"
         android:textSize="20dp"
-        android:background="?selectableItemBackground"
-        android:theme="@style/AppTheme.BlueRipple"/>
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/song_star"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
+        android:fontFamily="@font/scdream2"
+        android:paddingLeft="40dp"
+        android:scaleType="centerInside"
         android:text="@string/strBtn2"
         android:textSize="20dp"
-        android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
-        android:paddingLeft="40dp"
-        android:layout_gravity="center"
-        android:fontFamily = "@font/scdream2"
-        android:background="?selectableItemBackground"
         android:theme="@style/AppTheme.BlueRipple"
-        android:scaleType="centerInside" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/song_plane" />
 
     <Button
         android:id="@+id/songbutton3"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:paddingLeft="40dp"
-        android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
+        android:layout_marginTop="12dp"
         android:background="?selectableItemBackground"
-        android:theme="@style/AppTheme.BlueRipple"
-        android:fontFamily = "@font/scdream2"
+        android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
+        android:fontFamily="@font/scdream2"
+        android:paddingLeft="40dp"
         android:text="@string/strBtn3"
+        android:textSize="20dp"
 
-        />
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/song_star" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
