--- a/app/src/main/res/layout/activity_part_practice.xml
+++ b/app/src/main/res/layout/activity_part_practice.xml
@@ -1,170 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/back">
+    android:background="@drawable/back"
+    android:orientation="vertical">
+
 
     <ImageView
         android:id="@+id/firstmusicscore"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:layout_gravity="bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="centerInside"
-        android:src="@drawable/firstscore" />
+        android:src="@drawable/firstscore"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/pitchbutton3"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text="떴"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintStart_toStartOf="@+id/pitchbutton7"
+        app:layout_constraintTop_toBottomOf="@+id/firstmusicscore" />
 
-        <Button
-            android:id="@+id/pitchButton"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/scdream2"
-            android:text="떴"
-            android:textColor="@drawable/selected_btn"
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple" />
-
-        <Button
-            android:id="@+id/pitchbutton2"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/scdream2"
-            android:text="다"
-            android:textColor="@drawable/selected_btn"
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple" />
-
-        <Button
-            android:id="@+id/pitchbutton3"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/scdream2"
-            android:text="떴"
-            android:textColor="@drawable/selected_btn"
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple"/>
-
-        <Button
-            android:id="@+id/pitchbutton4"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="다"
-            android:textColor="@drawable/selected_btn"
-            android:fontFamily="@font/scdream2"
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/pitchButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginStart="7dp"
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text="떴"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton2"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/pitchbutton5"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/scdream2"
-            android:text="비"
-            android:textColor="@drawable/selected_btn"
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple"  />
+    <Button
+        android:id="@+id/pitchbutton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text="다"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton5"
+        app:layout_constraintTop_toBottomOf="@+id/firstmusicscore" />
 
-        <Button
-            android:id="@+id/pitchbutton6"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/scdream2"
-            android:text="행"
-            android:textColor="@drawable/selected_btn"
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple"  />
+    <Button
+        android:id="@+id/pitchbutton5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text="비"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton6"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/pitchbutton7"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/scdream2"
-            android:text="기"
-            android:textColor="@drawable/selected_btn"
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple"  />
+    <Button
+        android:id="@+id/pitchbutton8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text=""
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pitchbutton4" />
 
+    <Button
+        android:id="@+id/pitchbutton6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text="행"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton7"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton5"
+        app:layout_constraintTop_toBottomOf="@+id/pitchButton" />
 
-        <Button
-            android:id="@+id/pitchbutton8"
-            android:layout_width="0px"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:fontFamily="@font/scdream2"
-            android:text=""
-            android:textSize="20dp"
-            android:background="?selectableItemBackground"
-            android:theme="@style/AppTheme.BlueRipple" />
+    <Button
+        android:id="@+id/pitchbutton7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text="기"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton8"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton6" />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/pitchbutton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:fontFamily="@font/scdream2"
+        android:text="다"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton3"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton3" />
 
     <TextView
-        android:layout_margin="10dp"
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="14dp"
         android:text="0"
         android:textColor="#000000"
-        android:textSize="50sp" />
+        android:textSize="50sp"
+        app:layout_constraintBottom_toTopOf="@+id/highpitch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/highpitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:fontFamily="@font/scdream2"
+        android:text="Too high!"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/pitchline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/highpitch"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:fontFamily="@font/scdream2"
-            android:text="Too high!"
-            android:textSize="30dp" />
+    <ImageView
+        android:id="@+id/pitchline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="115dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/pitchline" />
 
-        <ImageView
-            android:id="@+id/pitchline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="35dp"
-            app:srcCompat="@drawable/pitchline" />
-
-        <TextView
-            android:id="@+id/lowpitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/scdream2"
-            android:text="Too low!"
-            android:textSize="30dp" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/lowpitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:fontFamily="@font/scdream2"
+        android:text="Too low!"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pitchline" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
