화면 사이즈 수정..?

--- a/app/src/main/res/layout/activity_part_practice.xml
+++ b/app/src/main/res/layout/activity_part_practice.xml
@@ -14,7 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
-        android:src="@drawable/firstscore" />
+        android:src="@drawable/firstscore"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
+        app:layout_constraintStart_toStartOf="@+id/pitchbutton3"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/pitchbutton4"
@@ -26,21 +29,25 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="299dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton3"
+        app:layout_constraintTop_toBottomOf="@+id/firstmusicscore" />
 
     <Button
         android:id="@+id/pitchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="떴"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton2"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton2"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/pitchbutton8"
@@ -51,21 +58,24 @@
         android:text=""
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="299dp"
-        tools:layout_editor_absoluteY="279dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton7"
+        app:layout_constraintTop_toBottomOf="@+id/pitchbutton4" />
 
     <Button
         android:id="@+id/pitchbutton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="떴"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton2"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton4"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton2" />
 
     <Button
         android:id="@+id/pitchbutton6"
@@ -77,34 +87,40 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="119dp"
-        tools:layout_editor_absoluteY="279dp" />
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton7"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton5"
+        app:layout_constraintTop_toBottomOf="@+id/pitchButton" />
 
     <Button
         android:id="@+id/pitchbutton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="비"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="279dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton6"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/pitchbutton7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="기"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="279dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton6"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton8"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton6" />
 
     <Button
         android:id="@+id/pitchbutton2"
@@ -116,46 +132,54 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        tools:layout_editor_absoluteX="119dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
+        app:layout_constraintStart_toEndOf="@+id/pitchButton"
+        app:layout_constraintTop_toBottomOf="@+id/firstmusicscore" />
 
     <TextView
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
         android:text="0"
         android:textColor="#000000"
         android:textSize="50sp"
-        tools:layout_editor_absoluteX="191dp"
-        tools:layout_editor_absoluteY="392dp" />
+        app:layout_constraintBottom_toTopOf="@+id/highpitch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/highpitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="46dp"
         android:fontFamily="@font/scdream2"
         android:text="Too high!"
         android:textSize="30dp"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="495dp" />
+        app:layout_constraintBottom_toTopOf="@+id/pitchline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/pitchline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/pitchline"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="580dp" />
+        android:layout_marginBottom="139dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/pitchline" />
 
     <TextView
         android:id="@+id/lowpitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="54dp"
         android:fontFamily="@font/scdream2"
         android:text="Too low!"
         android:textSize="30dp"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="638dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
